# nd-tests

./: CMakeLists.txt  affine.cc  array.cc  conv.cc  fft.cc  fill.cc  fmad.cc  fmad_scalar_ip.cc  helpers.cc  helpers.h  io.cc  ops.cc  saturate_ip.cc  xcorr.cc  xor_ip.cc
data/conv/: generate.m
data/fmad/1d/: a_f32.mat  a_u16.mat  b_f32.mat  b_u16.mat  make.m  x_f32.mat  x_u16.mat  z_f32.mat  z_u16.mat
data/fmad/4d/: a_f32.mat  a_u16.mat  b_f32.mat  b_u16.mat  make.m  x_f32.mat  x_u16.mat  z_f32.mat  z_u16.mat
data/xcorr/: in.mat  m1.mat  m2.mat  make.m  masked_ncc.mat  masked_ncc_overlap.mat  ncc.mat  ncc_overlap.mat  nxcorr.m
